[gd_scene load_steps=4 format=3 uid="uid://ph5ghsflqegf"]

[ext_resource type="PackedScene" uid="uid://cyvrywci15kev" path="res://chat.tscn" id="1_cfcun"]
[ext_resource type="Script" uid="uid://dfixgs880d3h5" path="res://websocket/WebSocketClient.gd" id="2_m4g4y"]
[ext_resource type="Script" uid="uid://d06jni2xgdhqx" path="res://client.gd" id="2_opbid"]

[node name="Client" instance=ExtResource("1_cfcun")]
script = ExtResource("2_opbid")

[node name="WebSocketClient" type="Node" parent="." index="0"]
script = ExtResource("2_m4g4y")
supported_protocols = PackedStringArray("demo-chat")

[node name="Panel" parent="." index="1"]
layout_mode = 1
anchors_preset = 15

[node name="VBoxContainer" parent="Panel" index="0"]
layout_mode = 1
anchors_preset = 15

[node name="Port" parent="Panel/VBoxContainer/Connect" index="2"]
visible = false

[node name="Listen" parent="Panel/VBoxContainer/Connect" index="3"]
visible = false

[connection signal="connected_to_server" from="WebSocketClient" to="." method="_on_web_socket_client_connected_to_server"]
[connection signal="connection_closed" from="WebSocketClient" to="." method="_on_web_socket_client_connection_closed"]
[connection signal="message_received" from="WebSocketClient" to="." method="_on_web_socket_client_message_received"]
[connection signal="toggled" from="Panel/VBoxContainer/Connect/Connect" to="." method="_on_connect_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/Send/Send" to="." method="_on_send_pressed"]
